welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:25: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    return c
           ^