welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c : Color) {
  while (!estSurBiscuit()) {
    if (isFacingTrail==c) {
      baisseBrosse()
      avance()
      leveBrosse()
    } else {
      gauche()
    }
  }
  prendBiscuit()
 }

def isFacingTrail():Boolean = {
  avance()
  var c=getCouleurSol()
  recule()
  if (estFaceMur()) {
    return false
  } else {
    avance()
    if (getCouleurSol()==c) {
    recule()
    return c
    } else { 
    recule()
    return false
    }
  }
}